src/views/Profile/styles/Feed.css
.statusUpdate {
  background-color: white;
  max-width: 694px;
  min-width: 694px;
  height: 50px;
  padding: 10px 10px;
  left: calc(50vw - 350px);
  border: 1px solid #ececec;
  border-radius: 6px;
  z-index: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: all ease .5s;
  margin-bottom: 20px; }
  .statusUpdate ul {
    padding: 0; }
  .statusUpdate li {
    display: inline-block;
    text-align: center;
    overflow: scroll; }

.statusUpdate--bannerMargin {
  margin-top: 262px !important; }

.statusUpdate__field {
  border-style: none;
  border: none;
  width: 100%;
  font-size: 1.1em;
  background-color: white;
  height: 44px;
  font-weight: 400;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box; }
  .statusUpdate__field:focus {
    outline: none; }
  .statusUpdate__field::placeholder {
    color: #a8a8a8; }

.statusUpdate__displayPublic {
  width: 100%;
  font-size: 1.1em;
  height: 44px;
  font-weight: 400;
  height: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 8px; }

.statusUpdate:hover .hideStatusButton {
  display: block; }

.hideStatusButton {
  display: none; }

.statusUpdate__button {
  margin: 0 20px 0 10px;
  background: transparent;
  color: #b8b8b8;
  padding: 0;
  transition: color .8s ease;
  border: none; }
  .statusUpdate__button:hover {
    background: transparent; }

.statusUpdate__button--remove:hover {
  color: #ca3232; }

.statusUpdate__button--cancel:hover {
  color: #6b6b6b; }

.statusUpdate__button--save:hover {
  color: #67cc7d; }

.statusUpdate__loading {
  background: white;
  width: 700px;
  height: 50px;
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center; }
  .statusUpdate__loading img {
    width: 100%;
    height: 100%;
    width: 40px;
    height: 40px; }

#feed {
  max-width: calc(694px + 20px) !important;
  min-width: calc(694px + 20px) !important;
  left: calc(50vw - 350px);
  margin-top: 18px;
  min-height: 610px;
  height: fit-content;
  display: flex;
  flex-direction: column;
  margin-bottom: 60px;
  justify-content: space-between;
  margin-left: 13px; }
  #feed ul {
    padding: 0; }
  #feed li {
    display: inline-block;
    text-align: center;
    overflow: scroll; }

#myFeed {
  max-width: calc(694px + 20px) !important;
  min-width: calc(694px + 20px) !important;
  left: calc(50vw - 350px);
  margin-top: 190px;
  min-height: 610px;
  height: fit-content;
  display: flex;
  flex-direction: column;
  margin-bottom: 60px;
  justify-content: space-between;
  margin-left: 13px; }
  #myFeed ul {
    padding: 0; }
  #myFeed li {
    display: inline-block;
    text-align: center;
    overflow: scroll; }

.collectibles {
  max-width: calc(694px + 20px) !important;
  min-width: calc(694px + 20px) !important;
  left: calc(50vw - 350px);
  margin-top: 18px;
  height: fit-content;
  display: flex;
  flex-direction: column;
  margin-bottom: 0;
  justify-content: space-between;
  margin-left: 13px; }

.profile__details {
  padding: 0 !important;
  max-width: calc(694px + 2.6em) !important;
  min-width: calc(694px + 2.6em) !important;
  background-color: white;
  border: solid 1px #ececec;
  border-radius: 6px; }

.feed__activity__user {
  border-radius: 50%;
  width: 40px;
  height: 40px;
  margin: 0;
  object-fit: cover;
  margin-right: 15px;
  background-color: #1168df;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center; }

.feed__activity__userWrapper {
  position: relative; }

.feed__activity__threeBoxEmblem {
  background-color: #1168df;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  position: absolute;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  bottom: -4px;
  right: 14px; }

.clear {
  background-color: transparent !important; }

.collectiblesHeader {
  display: flex;
  justify-content: flex-start;
  align-items: center; }
  .collectiblesHeader p {
    font-size: 18px;
    line-height: 24px !important;
    color: #747677;
    font-weight: 400;
    margin: 0; }

#feed__header {
  font-size: 18px;
  line-height: 24px !important;
  color: #747677;
  font-weight: 400;
  margin-bottom: 6px;
  padding: 20px 0 14px 20px;
  display: flex; }

.feed__activity__tile {
  margin-bottom: 16px;
  border: 1px solid #ececec;
  padding: 15px;
  width: 684px;
  border-radius: 6px;
  background-color: white; }

.feed__activity__info__key {
  min-width: fit-content;
  margin-right: 4px; }

.feed__activity__info__token {
  font-weight: 500;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 800;
  margin-right: 6px; }

.sentCurrency {
  color: #ca2641 !important; }

.receivedCurrency {
  color: #22bd6f !important; }

.feed__activity__info__value {
  font-weight: 500;
  max-width: 52%;
  word-wrap: break-word;
  font-weight: 800;
  margin-right: 6px; }

.feed__activity__data {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  width: 100%; }

.feed__activity__address__amount__emoji {
  height: 34px;
  margin-left: 6px;
  font-size: 24px;
  padding-top: 6px; }

.feed__activity__context {
  display: flex;
  align-items: center;
  margin-bottom: 1.3em;
  padding: 0; }
  .feed__activity__context:hover h4 {
    text-decoration: underline; }

.feed__activity__context__network {
  min-width: 40px;
  height: 40px;
  margin-right: 12px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  color: white;
  font-weight: 500; }

.logo__icon {
  width: 2.1em;
  height: 2.1em;
  border-radius: 4px;
  background-color: #006ECC;
  display: flex;
  align-items: center;
  justify-content: center; }
  .logo__icon h2 {
    color: white;
    font-size: 1.5em !important;
    font-weight: 700; }

.feed__activity__image {
  border-radius: 6px;
  min-width: 654px;
  width: 654px;
  margin: 0;
  object-fit: cover;
  background-color: #006ECC;
  margin-top: 20px; }
/* ... */

